# sdhacknight2025

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.env/: local.sample  postgres
assets/src/: input.css
config/: urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
sdhacknight/: admin.py  apps.py  models.py  urls.py  views.py
sdhacknight/templates/sdhacknight/: base.html  index.html
