[project]
name = "sdhacknight2025"
version = "0.1.0"
description = "SD Hack Night 2025 Demo Project"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=4.2,<4.3",
    "django-debug-toolbar>=5.0.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "whitenoise>=6.9.0",
]


[tool.ruff.lint]
# Enable:
#  Pyflakes (`F`)
#  pycodestyle (`E`) error codes.
#  isort (`I`) import sorting
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.isort]
# https://docs.astral.sh/ruff/settings/#lintisort
force-single-line = true
case-sensitive = false
lines-after-imports = 2

# Ignore `F405` (import *) in config files
[tool.ruff.lint.per-file-ignores]
"config/settings/*" = ["F405"]
